# settings

./: .gitignore  README.md  cfgs.py  pyproject.toml  settings.py  test_settings.py
