[tool.poetry]
name = "settings"
version = "0.1.0"
description = "⚙ Serializable hierarchical settings ⚙"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pytest = "*"
tdir = "^1.5.0"
tomlkit = "^0.11.7"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
